--- a/insinhoputrapratama/about.html
+++ b/insinhoputrapratama/about.html
@@ -155,52 +155,23 @@
     </section>
     <section class="wrapper bg-light">
       <div class="container py-14 py-md-16">
-        <div class="row gx-lg-8 gx-xl-12 gy-10 gy-lg-0">
-          <div class="col-lg-4 mt-lg-2">
-            <h2 class="fs-15 text-uppercase text-muted mb-3">Our Clients</h2>
-            <h3 class="display-4 mb-3 pe-xxl-5">Trusted by over 300+ clients</h3>
-            <p class="lead fs-lg mb-0 pe-xxl-5">We bring solutions to make life easier for our customers.</p>
-            <a href="./clients.html" class="btn btn-primary rounded-pill mt-5 mb-0">Show All Clients</a>
-          </div>
-          <!-- /column -->
-          <div class="col-lg-8">
-            <div class="row row-cols-2 row-cols-md-4 gx-0 gx-md-8 gx-xl-12 gy-12">
-              <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/z1.png" alt="" /></figure>
-              </div>
-              <!--/column -->
-              <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/z2.png" alt="" /></figure>
-              </div>
-              <!--/column -->
-              <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/z3.png" alt="" /></figure>
-              </div>
-              <!--/column -->
-              <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/z4.png" alt="" /></figure>
-              </div>
-              <!--/column -->
-              <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/z5.png" alt="" /></figure>
-              </div>
-              <!--/column -->
-              <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/z6.png" alt="" /></figure>
-              </div>
-              <!--/column -->
-              <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/z7.png" alt="" /></figure>
-              </div>
-              <!--/column -->
-              <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/z8.png" alt="" /></figure>
-              </div>
-              <!--/column -->
+        <h2 class="fs-15 text-uppercase text-muted mb-5">Our Clients</h2>
+        <div class="swiper-container clients mb-5" data-margin="30" data-dots="false" data-loop="true" data-autoplay="true" data-autoplaytime="1" data-drag="false" data-speed="5000" data-items-xxl="7" data-items-xl="6" data-items-lg="5" data-items-md="4" data-items-xs="2">
+          <div class="swiper brand-swiper">
+            <div class="swiper-wrapper ticker">
+              <div class="swiper-slide px-5"><img src="./assets/img/brands/kemenhub_logo.webp" alt="" /></div>
+              <div class="swiper-slide px-5"><img src="./assets/img/brands/kementrian_kelautan_logo.webp" alt="" /></div>
+              <div class="swiper-slide px-5"><img src="./assets/img/brands/proskuneo_logo.webp" alt="" /></div>
+              <div class="swiper-slide px-5"><img src="./assets/img/brands/wika_gedung_logo_1.webp" alt="" /></div>
+              <div class="swiper-slide px-5"><img src="./assets/img/brands/wika_industri_logo.webp" alt="" /></div>
+              <div class="swiper-slide px-5"><img src="./assets/img/brands/wika_logo.webp" alt="" /></div>
             </div>
-            <!--/.row -->
+            <!--/.swiper-wrapper -->
           </div>
-          <!-- /column -->
+          <!-- /.swiper -->
+        </div>
+        <div class="text-center">
+          <a href="./clients.html" class="btn btn-primary rounded-pill mt-5 mb-0 text-center">Show All Clients</a>
         </div>
         <!-- /.row -->
       </div>
