--- a/insinhoputrapratama/clients.html
+++ b/insinhoputrapratama/clients.html
@@ -25,7 +25,7 @@
               </div>
               <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
                 <div class="offcanvas-header d-lg-none">
-                  <h3 class="text-white fs-30 mb-0">Sandbox</h3>
+                  <h3 class="text-white fs-30 mb-0">PT. Insinho Putra Pratama</h3>
                   <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body ms-lg-auto d-flex flex-column h-100">
@@ -54,26 +54,11 @@
           </nav>
     </header>
     <!-- /header -->
-    <section class="section-frame overflow-hidden">
-        <div class="wrapper bg-gray">
-          <div class="container py-13 py-md-17 text-center">
-            <div class="row">
-              <div class="col-lg-10 col-xxl-8 mx-auto">
-                <h1 class="display-1 mb-1">Check out some of our Satisfied Clients.</h1>
-              </div>
-              <!-- /column -->
-            </div>
-            <!-- /.row -->
-          </div>
-          <!-- /.container -->
-        </div>
-        <!-- /.wrapper -->
-    </section>
-
-    <section class="wrapper bg-light wrapper-border">
+    
+      <section class="wrapper bg-light">
         <div class="container py-14 py-md-16">
-          <p class="text-center mb-8">Trusted by over 2K+ clients across the world</p>
-          <div class="swiper-container clients mb-0" data-margin="30" data-dots="false" data-loop="true" data-autoplay="true" data-autoplaytime="1" data-drag="false" data-speed="5000" data-items-xxl="7" data-items-xl="6" data-items-lg="5" data-items-md="4" data-items-xs="2">
+          <h2 class="fs-15 text-uppercase text-muted mb-3">Our Clients</h2>
+          <div class="swiper-container clients mb-15" data-margin="30" data-dots="false" data-loop="true" data-autoplay="true" data-autoplaytime="1" data-drag="false" data-speed="5000" data-items-xxl="7" data-items-xl="6" data-items-lg="5" data-items-md="4" data-items-xs="2">
             <div class="swiper brand-swiper">
               <div class="swiper-wrapper ticker">
                 <div class="swiper-slide px-5"><img src="./assets/img/brands/kemenhub_logo.webp" alt="" /></div>
@@ -88,24 +73,6 @@
             <!-- /.swiper -->
           </div>
           <!-- /.swiper-container -->
-        </div>
-        <!-- /.container -->
-    </section>
-      <!-- /section -->
-    
-      <section class="wrapper bg-light">
-        <div class="container py-14 py-md-16">
-          <h2 class="fs-15 text-uppercase text-muted mb-3">Our Clients</h2>
-          <div class="row gx-lg-8 mb-10 gy-5">
-            <div class="col-lg-6">
-              <h3 class="display-5 mb-0">We are trusted by over 300+ clients. Join them by using our services and grow your business.</h3>
-            </div>
-            <!-- /column -->
-            <div class="col-lg-6">
-              <p class="lead mb-0">Donec ullamcorper nulla non metus auctor fringilla. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Maecenas faucibus mollis interdum. Cras justo odio mollis.</p>
-            </div>
-            <!-- /column -->
-          </div>
           <!-- /.row -->
           <div class="row row-cols-2 row-cols-md-3 row-cols-xl-3 gx-lg-6 gy-6 justify-content-center brand-swiper">
             <div class="col">
