--- a/insinhoputrapratama/contact.html
+++ b/insinhoputrapratama/contact.html
@@ -144,9 +144,7 @@
     <section class="wrapper image-wrapper bg-auto no-overlay bg-image text-center bg-map" data-image-src="./assets/img/map.png">
       <div class="container pt-0 pb-14 pt-md-16 pb-md-18">
         <div class="row">
-          <div class="col-lg-9 col-xxl-8 mx-auto">
-            <h3 class="display-4 mb-8 px-xl-12">We are trusted by over 5000+ clients. Join them now and grow your business.</h3>
-          </div>
+          <h2 class="fs-15 text-uppercase text-muted mb-5">Our Clients</h2>
           <!-- /.row -->
         </div>
         <!-- /column -->
